[tool.poetry]
name = "minotaur"
version = "0.1.0"
description = "monitoring a flask application using standard tools"
authors = ["subhamsarangi <subhamsarangi2016@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
Flask-SQLAlchemy = "^3.1.1"
prometheus-flask-exporter = "^0.23.1"
locust = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
